# pnet-simulation

./: .gitignore  README.md  pnet-minimal.yaml  pnet.yaml  project_config.py  pyproject.toml  requirements.txt
configs/: bash_test_p1000.sh  config_1D_pnet.yaml  config_1D_randomForest.yaml  config_2D_10k_samples.yaml  config_2D_1k_samples.yaml  config_hparam_tune_logistic_1d.yaml  config_hparam_tune_logistic_p1000.yaml  config_hparam_tune_pnet_germline.yaml  config_hparam_tune_pnet_somatic.yaml  config_hparam_tune_pnet_somatic_and_germline.yaml  config_p1000_empirical.yaml  config_test_1D_functionality.yaml  data.yaml  perturbed_data-somatic_mut-or_x_control_freqs.yaml  perturbed_data.yaml  reviewers_1D_add_seeds_pnet.yaml  reviewers_1D_add_seeds_rf.yaml  reviewers_CV_logistic_regression_p1000_somatic.yaml  reviewers_logistic_regression_1D.yaml  reviewers_logistic_regression_p1000_germline.yaml  reviewers_logistic_regression_p1000_somatic.yaml  revision2_10x_splits_p1000_logistic_regression_germline.yaml  revision2_10x_splits_p1000_logistic_regression_somatic.yaml  revision2_10x_splits_p1000_pnet_rf.yaml
notebooks/analysis/: explore_real_data_to_define_realistic_simulation_parameter_range.ipynb  get_1D_simulation_results.ipynb  get_2D_simulation_results.ipynb  get_P1000_patient_level_conf_intervals.ipynb  get_P1000_results.ipynb  get_P1000_results_across_datasplits.ipynb  make_config_files_for_single-gene_perturbed_data.ipynb  make_supplementary_tables.ipynb  stability_and_performance_analysis.ipynb  supp_tables_to_xlxs.ipynb
src/pipelines/: temp.py  temp_sgd_l2_cv.py  (+4 more)
(+29 files in other folders)
